bk_ida/gccida/c1/expand_asm_operands
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_asm_operands/src/stmt.c:2060:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // r13 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_asm_operands/src/stmt.c:2063:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // r14 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_asm_operands/src/stmt.c:2064:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_asm_operands/src/stmt.c:2065:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_asm_operands/src/stmt.c:2066:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v14; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_asm_operands/src/stmt.c:2067:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v15; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_asm_operands/src/stmt.c:2068:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v16; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_asm_operands/src/stmt.c:2075:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v23; // r14 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_asm_operands/src/stmt.c:2096:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v44; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_asm_operands/src/stmt.c:2103:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v51; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_asm_operands/src/stmt.c:2111:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_asm_operands/src/stmt.c:2116:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v64; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_asm_operands/src/stmt.c:2131:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v79; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_asm_operands/src/stmt.c:2133:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v81; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_asm_operands/src/stmt.c:2158:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *inout_mode; // [rsp+10h] [rbp-C0h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_asm_operands/src/stmt.c:2189:30: error: expected expression
inout_mode = ( machine_mode *)inout_opnum; 
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_asm_operands/src/stmt.c:2189:16: error: use of undeclared identifier 'machine_mode'
inout_mode = ( machine_mode *)inout_opnum; 
               ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_asm_operands/src/stmt.c:2295:22: error: use of undeclared identifier 'machine_mode'
v40 = gen_reg_rtx( ( machine_mode)*( ( unsigned __int8 *)v38 + 2)); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_asm_operands/src/stmt.c:2339:20: error: expected expression
v44 = ( tree_node *)obody; 
                   ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_asm_operands/src/obj/stmt.o] Error 1
